Move to src/ based project.

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,14 +21,14 @@ classifiers =
 [options]
 packages = find:
 package_dir =
-    = .
+    = src
 python_requires = >=3.5
 install_requires =
     IMDbPY>=6.5
 zip_safe = false
 
 [options.packages.find]
-where = .
+where = src
 
 [options.entry_points]
 console_scripts =
