--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = pytivometa
 version = 0.3.0
 author = Matthew A. Clapp
-author_email = Matther Clapp <itsayellow+dev@gmail.com>
+author_email = Matthew Clapp <itsayellow+dev@gmail.com>
 description = Creates pytivo metadata for video files.
 long_description = file: README.rst
 long_description_content_type = text/x-rst
